# altlinker

./: Makefile  README.md  pyproject.toml  requirements.txt  services.json
altlinker/: config.py  core.py  server.py  telegram_handler.py
scripts/: format.sh  polling.sh  server.sh
systemd/: altlinker.service
systemd/altlinker.service.d/: override.conf
