[project]
name = "altlinker"
version = "0.0.1"
description = ""
authors = [{ name = "Admin", email = "sehraramiz@disroot.org" }]
requires-python = "~=3.10"
dependencies = [
    "starlette>=0.40.0,<0.41",
    "httpx>=0.23.3,<0.24",
    "uvicorn>=0.21.1,<0.22",
    "pytelegrambotapi>=4.10.0,<5",
    "aiohttp>=3.10.11,<4",
]

[dependency-groups]
dev = [
    "pytest",
    "black",
    "mypy",
    "ruff",
    "isort",
]

[tool.black]
line-length = 79

[tool.mypy]
strict = false
warn_unused_ignores = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.ruff]
select = [
    "E",
    "W",
    "F",
    # "I",  # isort
    "C",
    "B",
]
ignore = [
    "E501",
    "B008",
]

[tool.isort]
profile = "black"
